hphp/hack/test/typecheck/coeffects/closures_restore_env.php.exp
File "closures_restore_env.php", line 23, characters 3-10:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "closures_restore_env.php", line 19, characters 22-23:
  From this declaration, the context of this function body provides the capability set {}
  File "closures_restore_env.php", line 5, characters 18-26:
  But the function being called requires the capability NonDet
